vest-dsl/test/bad/struct_duplicate_fields.vest
fmt = {
  @f1: u8,
  @f1: u16,
}
